--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,76 +1,208 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    <link href="assets/landing/css/bootstrap.css" rel="stylesheet" />
+    <link href="assets/landing/css/landing-page.css" rel="stylesheet"/>
+{% endblock %}
+
 {% block body %}
-    <div id="wrapper">
-        <div id="container">
-            <div id="welcome">
-                <h1><span>Welcome to</span> Symfony {{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION') }}</h1>
+    <body class="landing-page landing-page1">
+    <nav class="navbar navbar-transparent navbar-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar bar1"></span>
+                    <span class="icon-bar bar2"></span>
+                    <span class="icon-bar bar3"></span>
+                </button>
+                <a href="#">
+                    <div class="logo-container">
+                        <!--<div class="logo">-->
+                        <!--&lt;!&ndash;<img src="" alt="Courier Calc Logo">&ndash;&gt;-->
+                        <!--</div>-->
+                        <!--<div class="brand">-->
+                        <!--Courier Calc-->
+                        <!--</div>-->
+                    </div>
+                </a>
             </div>
-
-            <div id="status">
-                <p>
-                    <svg id="icon-status" width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z" fill="#759E1A"/></svg>
-
-                    Your application is now ready. You can start working on it at:
-                    <code>{{ base_dir }}</code>
-                </p>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="example" >
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">Sign-In</a>
+                    </li>
+                    <li>
+                        <a href="#">Register</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
             </div>
-
-            <div id="next">
-                <h2>What's next?</h2>
-                <p>
-                    <svg id="icon-book" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="-12.5 9 64 64" enable-background="new -12.5 9 64 64" xml:space="preserve">
-                        <path fill="#AAA" d="M6.8,40.8c2.4,0.8,4.5-0.7,4.9-2.5c0.2-1.2-0.3-2.1-1.3-3.2l-0.8-0.8c-0.4-0.5-0.6-1.3-0.2-1.9
-                            c0.4-0.5,0.9-0.8,1.8-0.5c1.3,0.4,1.9,1.3,2.9,2.2c-0.4,1.4-0.7,2.9-0.9,4.2l-0.2,1c-0.7,4-1.3,6.2-2.7,7.5
-                            c-0.3,0.3-0.7,0.5-1.3,0.6c-0.3,0-0.4-0.3-0.4-0.3c0-0.3,0.2-0.3,0.3-0.4c0.2-0.1,0.5-0.3,0.4-0.8c0-0.7-0.6-1.3-1.3-1.3
-                            c-0.6,0-1.4,0.6-1.4,1.7s1,1.9,2.4,1.8c0.8,0,2.5-0.3,4.2-2.5c2-2.5,2.5-5.4,2.9-7.4l0.5-2.8c0.3,0,0.5,0.1,0.8,0.1
-                            c2.4,0.1,3.7-1.3,3.7-2.3c0-0.6-0.3-1.2-0.9-1.2c-0.4,0-0.8,0.3-1,0.8c-0.1,0.6,0.8,1.1,0.1,1.5c-0.5,0.3-1.4,0.6-2.7,0.4l0.3-1.3
-                            c0.5-2.6,1-5.7,3.2-5.8c0.2,0,0.8,0,0.8,0.4c0,0.2,0,0.2-0.2,0.5c-0.2,0.3-0.3,0.4-0.2,0.7c0,0.7,0.5,1.1,1.2,1.1
-                            c0.9,0,1.2-1,1.2-1.4c0-1.2-1.2-1.8-2.6-1.8c-1.5,0.1-2.8,0.9-3.7,2.1c-1.1,1.3-1.8,2.9-2.3,4.5c-0.9-0.8-1.6-1.8-3.1-2.3
-                            c-1.1-0.7-2.3-0.5-3.4,0.3c-0.5,0.4-0.8,1-1,1.6c-0.4,1.5,0.4,2.9,0.8,3.4l0.9,1c0.2,0.2,0.6,0.8,0.4,1.5c-0.3,0.8-1.2,1.3-2.1,1
-                            c-0.4-0.2-1-0.5-0.9-0.9c0.1-0.2,0.2-0.3,0.3-0.5s0.1-0.3,0.1-0.3c0.2-0.6-0.1-1.4-0.7-1.6c-0.6-0.2-1.2,0-1.3,0.8
-                            C4.3,38.4,4.7,40,6.8,40.8z M46.1,20.9c0-4.2-3.2-7.5-7.1-7.5h-3.8C34.8,10.8,32.7,9,30.2,9L-2.3,9.1c-2.8,0.1-4.9,2.4-4.9,5.4
-                            L-7,58.6c0,4.8,8.1,13.9,11.6,14.1l34.7-0.1c3.9,0,7-3.4,7-7.6L46.1,20.9z M-0.3,36.4c0-8.6,6.5-15.6,14.5-15.6
-                            c8,0,14.5,7,14.5,15.6S22.1,52,14.2,52C6.1,52-0.3,45-0.3,36.4z M42.1,65.1c0,1.8-1.5,3.1-3.1,3.1H4.6c-0.7,0-3-1.8-4.5-4.4h30.4
-                            c2.8,0,5-2.4,5-5.4V17.9h3.7c1.6,0,2.9,1.4,2.9,3.1V65.1L42.1,65.1z"/>
-                    </svg>
-
-                    Read the documentation to learn
-                    <a href="http://symfony.com/doc/{{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION')[:3] }}/page_creation.html">
-                        How to create your first page in Symfony
-                    </a>
-                </p>
-            </div>
-
+            <!-- /.navbar-collapse -->
         </div>
+    </nav>
+    <div class="wrapper">
+        <div class="parallax filter-gradient gray" data-color="gray">
+            <div class="parallax-background">
+                <img class="parallax-background-image" src="assets/landing/img/van-driving-in-sunlight-main.jpg">
+            </div>
+            <div class= "container">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-6">
+                        <div class="description">
+                            <h2>Job pricing made simple.</h2>
+                            <br>
+                            <h5>Use Courier Calc to quickly and easily calculate job distance, delivery time and generate accurate quotations. Email quotes instantly to your customers and track conversions from your dashboard. Courier Calc, helping you to provide a smoother journey for your customers!</h5>
+                        </div>
+                        <div class="buttons">
+                            <button class="btn btn-danger btn-fill">Register for a FREE account!</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section section-gray section-clients">
+            <div class="container text-center">
+                <h4 class="header-text">Its still early days...</h4>
+                <p>Courier Calc is currently in its first iteration.<br>
+                    It is being actively developed, so we welcome any feedback or feature suggestions :-)</p>
+            </div>
+        </div>
+        <div class="section section-presentation">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="description">
+                            <h4 class="header-text">It's beautiful</h4>
+                            <p>And your app is also probably social, awesome, easy-to-use and vital to users. This is the place to enlist all the good things that your app has to share. Focus on the benefits that the uers will receive. Try to combine imaginery with text and show meaningful printscreens from your app, that will make it clear what exactly the basic functions are. </p>
+                            <p>Try to make it very clear for the people browsing the page that this product will enrich their life and will make a nice addition to the homescreen.
+                            <p>
+                        </div>
+                    </div>
+                    <div class="col-md-5 col-md-offset-1 hidden-xs">
+                        <img src="assets/landing/img/mac.png"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section section-demo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div id="description-carousel" class="carousel fade" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="item">
+                                    <img src="assets/landing/img/template/examples/home_33.jpg" alt="">
+                                </div>
+                                <div class="item active">
+                                    <img src="assets/landing/img/template/examples/home_22.jpg" alt="">
+                                </div>
+                                <div class="item">
+                                    <img src="assets/landing/img/template/examples/home_11.jpg" alt="">
+                                </div>
+                            </div>
+                            <ol class="carousel-indicators carousel-indicators-blue">
+                                <li data-target="#description-carousel" data-slide-to="0" class=""></li>
+                                <li data-target="#description-carousel" data-slide-to="1" class="active"></li>
+                                <li data-target="#description-carousel" data-slide-to="2" class=""></li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-md-5 col-md-offset-1">
+                        <h4 class="header-text">Easy to integrate</h4>
+                        <p>
+                            With all the apps that users love! Make it easy for users to share, like, post and tweet their favourite things from the app. Be sure to let users know they continue to remain connected while using your app!
+                        </p>
+                        <a href="http://www.creative-tim.com/product/awesome-landing-page" id="Demo3" class="btn btn-fill btn-info" data-button="info">Get Free Demo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section section-features">
+            <div class="container">
+                <h4 class="header-text text-center">Features</h4>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card card-red">
+                            <div class="icon">
+                                <i class="pe-7s-car"></i>
+                            </div>
+                            <div class="text">
+                                <h4>Calculate job distance &amp; duration</h4>
+                                <p>Enter the job start location and destination and Courier Calc will calculate the journey distance and estimate duration. You can alos add a 'via' option.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card card-red">
+                            <div class="icon">
+                                <i class="pe-7s-cash"></i>
+                            </div>
+                            <h4>Generate quotes in seconds</h4>
+                            <p>No two jobs are the same. Create custom fee scales and using the journey distance and vehicle type Courier Calc will generate an accurate quotation for you to email directly to your customer.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card card-red">
+                            <div class="icon">
+                                <i class="pe-7s-graph1"></i>
+                            </div>
+                            <h4>Track performance from your dashboard</h4>
+                            <p>Courier Calc's intuitive dashboard shows a summary of your recent quotes and enables you to monitor conversions.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section section-no-padding">
+            <div class="parallax filter-gradient gray" data-color="gray">
+                <div class="parallax-background">
+                    <img class ="parallax-background-image" src="assets/landing/img/IT-page-hero-image-960x550.jpg          "/>
+                </div>
+                <div class="info">
+                    <h1>Try Courier Calc for FREE!</h1>
+                    <p>Register now and start pricing jobs immediately</p>
+                    <a href="" class="btn btn-neutral btn-lg btn-fill">REGISTER</a>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <nav class="pull-left">
+                    <ul>
+                        <li><a href="#">Sign-In</a>
+                        </li>
+                        <li>
+                            <a href="#">Register</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="social-area pull-right">
+                    <a class="btn btn-social btn-facebook btn-simple">
+                        <i class="fa fa-facebook-square"></i>
+                    </a>
+                    <a class="btn btn-social btn-twitter btn-simple">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </div>
+                <div class="copyright">
+                    &copy; 2017 Courier Calc, a smoother journey <i class="fa fa-car"></i>
+                </div>
+            </div>
+        </footer>
     </div>
 {% endblock %}
 
-{% block stylesheets %}
-<style>
-    body { background: #F5F5F5; font: 18px/1.5 sans-serif; }
-    h1, h2 { line-height: 1.2; margin: 0 0 .5em; }
-    h1 { font-size: 36px; }
-    h2 { font-size: 21px; margin-bottom: 1em; }
-    p { margin: 0 0 1em 0; }
-    a { color: #0000F0; }
-    a:hover { text-decoration: none; }
-    code { background: #F5F5F5; max-width: 100px; padding: 2px 6px; word-wrap: break-word; }
-    #wrapper { background: #FFF; margin: 1em auto; max-width: 800px; width: 95%; }
-    #container { padding: 2em; }
-    #welcome, #status { margin-bottom: 2em; }
-    #welcome h1 span { display: block; font-size: 75%; }
-    #icon-status, #icon-book { float: left; height: 64px; margin-right: 1em; margin-top: -4px; width: 64px; }
-    #icon-book { display: none; }
-
-    @media (min-width: 768px) {
-        #wrapper { width: 80%; margin: 2em auto; }
-        #icon-book { display: inline-block; }
-        #status a, #next a { display: block; }
-
-        @-webkit-keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-        @keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-        .sf-toolbar { opacity: 0; -webkit-animation: fade-in 1s .2s forwards; animation: fade-in 1s .2s forwards;}
-    }
-</style>
+{% block javascripts %}
+    <script src="assets/landing/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="assets/landing/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+    <script src="assets/landing/js/bootstrap.js" type="text/javascript"></script>
+    <script src="assets/landing/js/awesome-landing-page.js" type="text/javascript"></script>
 {% endblock %}
