--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,12 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-    <link href="assets/landing/css/bootstrap.css" rel="stylesheet" />
-    <link href="assets/landing/css/landing-page.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="{{ asset('assets/landing/css/landing-page.css')}}" >
 {% endblock %}
 
 {% block body %}
-    <body class="landing-page landing-page1">
+<body class="landing-page landing-page1">
     <nav class="navbar navbar-transparent navbar-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,13 +31,13 @@
             <div class="collapse navbar-collapse" id="example" >
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Sign-In</a>
+                        <a href="{{ path('fos_user_security_login') }}">Sign-In</a>
                     </li>
                     <li>
-                        <a href="#">Register</a>
+                        <a href="{{ path('fos_user_registration_register') }}">Register</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="mailto:hello@couriercalc.com">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +47,7 @@
     <div class="wrapper">
         <div class="parallax filter-gradient gray" data-color="gray">
             <div class="parallax-background">
-                <img class="parallax-background-image" src="assets/landing/img/van-driving-in-sunlight-main.jpg">
+                <img class="parallax-background-image" src="{{ asset('assets/img/van-driving-in-sunlight-main.jpg') }}">
             </div>
             <div class= "container">
                 <div class="row">
@@ -84,7 +83,7 @@
                         </div>
                     </div>
                     <div class="col-md-5 col-md-offset-1 hidden-xs">
-                        <img src="assets/landing/img/mac.png"/>
+                        <img src="{{ asset('assets/img/mac.png') }}"/>
                     </div>
                 </div>
             </div>
@@ -96,13 +95,13 @@
                         <div id="description-carousel" class="carousel fade" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="item">
-                                    <img src="assets/landing/img/template/examples/home_33.jpg" alt="">
+                                    <img src="{{ asset('assets/img/template/examples/home_33.jpg') }}" alt="">
                                 </div>
                                 <div class="item active">
-                                    <img src="assets/landing/img/template/examples/home_22.jpg" alt="">
+                                    <img src="{{ asset('assets/img/template/examples/home_22.jpg') }}" alt="">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/landing/img/template/examples/home_11.jpg" alt="">
+                                    <img src="{{ asset('assets/img/template/examples/home_11.jpg') }}" alt="">
                                 </div>
                             </div>
                             <ol class="carousel-indicators carousel-indicators-blue">
@@ -133,7 +132,7 @@
                             </div>
                             <div class="text">
                                 <h4>Calculate job distance &amp; duration</h4>
-                                <p>Enter the job start location and destination and Courier Calc will calculate the journey distance and estimate duration. You can alos add a 'via' option.</p>
+                                <p>Enter the job start location and destination and Courier Calc will calculate the journey distance and estimate duration. You can also add a 'via' option.</p>
                             </div>
                         </div>
                     </div>
@@ -161,7 +160,7 @@
         <div class="section section-no-padding">
             <div class="parallax filter-gradient gray" data-color="gray">
                 <div class="parallax-background">
-                    <img class ="parallax-background-image" src="assets/landing/img/IT-page-hero-image-960x550.jpg          "/>
+                    <img class ="parallax-background-image" src="{{ asset('assets/img/IT-page-hero-image-960x550.jpg') }}          "/>
                 </div>
                 <div class="info">
                     <h1>Try Courier Calc for FREE!</h1>
@@ -198,11 +197,10 @@
             </div>
         </footer>
     </div>
+</body>
 {% endblock %}
 
 {% block javascripts %}
-    <script src="assets/landing/js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="assets/landing/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
-    <script src="assets/landing/js/bootstrap.js" type="text/javascript"></script>
-    <script src="assets/landing/js/awesome-landing-page.js" type="text/javascript"></script>
+    <script src="{{ asset('assets/landing/js/jquery-ui-1.10.4.custom.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/landing/js/awesome-landing-page.js') }}" type="text/javascript"></script>
 {% endblock %}
