--- a/app/Resources/views/default/Partials/nav.html.twig
+++ b/app/Resources/views/default/Partials/nav.html.twig
@@ -10,13 +10,13 @@
             {#<a class="navbar-brand" href="#">Go Direct Dashboard</a>#}
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-left">
-                <li>
-                    <a href="">
-                        <i class="fa fa-search"></i>
-                    </a>
-                </li>
-            </ul>
+            {#<ul class="nav navbar-nav navbar-left">#}
+                {#<li>#}
+                    {#<a href="">#}
+                        {#<i class="fa fa-search"></i>#}
+                    {#</a>#}
+                {#</li>#}
+            {#</ul>#}
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
@@ -24,7 +24,7 @@
                 </li>
                 <li>
                     <a href="{{ path('fos_user_profile_show') }}">
-                        Your Account
+                        Account
                     </a>
                 </li>
                 <li>
