fee scale crud scaffolding

--- a/app/Resources/views/default/Partials/sidebar.html.twig
+++ b/app/Resources/views/default/Partials/sidebar.html.twig
@@ -23,6 +23,12 @@
                     <p>Quotes</p>
                 </a>
             </li>
+            <li>
+                <a href="{{ path('feescale_index') }}">
+                    <i class="pe-7s-cash"></i>
+                    <p>FeeScales</p>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
