refactor logic from quote controller

--- a/app/Resources/views/default/Partials/sidebar.html.twig
+++ b/app/Resources/views/default/Partials/sidebar.html.twig
@@ -6,7 +6,7 @@
         </div>
         <ul class="nav">
             <li class="active">
-                <a href="{{ path('createQuote') }}">
+                <a href="{{ path('quote_new') }}">
                     <i class="pe-7s-plus"></i>
                     <p>Create New Quote</p>
                 </a>
@@ -18,7 +18,7 @@
                 </a>
             </li>
             <li>
-                <a href="{{ path('quotes') }}">
+                <a href="{{ path('quote_index') }}">
                     <i class="pe-7s-calculator"></i>
                     <p>Quotes</p>
                 </a>
