--- a/src/AppBundle/Resources/views/Quote/show.html.twig
+++ b/src/AppBundle/Resources/views/Quote/show.html.twig
@@ -134,13 +134,24 @@
 
     <script type="text/javascript">
         function initMap() {
-            var uluru = {lat: -25.363, lng: 131.044};
+            var start = {
+                lat: {{ quote.start.lat }},
+                lng: {{ quote.start.lon }}
+            };
+            var destination = {
+                lat: {{ quote.destination.lat }},
+                lng: {{ quote.destination.lon }}
+            };
             var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 4,
-                center: uluru
+                center: start
             });
-            var marker = new google.maps.Marker({
-                position: uluru,
+            new google.maps.Marker({
+                position: start,
+                map: map
+            });
+            new google.maps.Marker({
+                position: destination,
                 map: map
             });
         }
